Mobile fix - Updated css classes to fix the overlapping and sizing issues related to mobile screen size. - Added overflow state to handle scrolling and centering of player hand(s).

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root { 
-    --bg: #07120b; 
+    --bg: transparent;
     --card-bg: #06160e; 
 }
 
